--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
             <div class="animate__animated animate__backInUp animate__delay-1s">
                 <a href="https://www.glitchedpanda.cf/YouTube" target="_blank" rel="noopener noreferrer"><button class="btn1">YOUTUBE</button></a>
+                <a href="https://www.glitchedpanda.cf/Discord" target="_blank" rel="noopener noreferrer"><button class="btn3">DISCORD</button></a>
                 <a href="https://www.glitchedpanda.cf/Twitter" target="_blank" rel="noopener noreferrer"><button class="btn2">TWITTER</button></a>
             </div>
         </div>
