--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="./css/button.css">
 
+    <script src="https://kit.fontawesome.com/b7b67f50c2.js" crossorigin="anonymous"></script>
+
     <title>Glitched Panda</title>
 </head>
 <body>
@@ -21,9 +23,9 @@
             <p>A panda that likes gaming and coding</p>
 
             <div class="animate__animated animate__backInUp animate__delay-1s">
-                <a href="https://www.glitchedpanda.cf/YouTube" target="_blank" rel="noopener noreferrer"><button class="btn1">YOUTUBE</button></a>
-                <a href="https://www.glitchedpanda.cf/Discord" target="_blank" rel="noopener noreferrer"><button class="btn3">DISCORD</button></a>
-                <a href="https://www.glitchedpanda.cf/Twitter" target="_blank" rel="noopener noreferrer"><button class="btn2">TWITTER</button></a>
+                <a href="https://www.glitchedpanda.cf/YouTube" target="_blank" rel="noopener noreferrer"><button class="btn1"><i class="fa-brands fa-youtube"></i> YOUTUBE</button></a>
+                <a href="https://www.glitchedpanda.cf/Discord" target="_blank" rel="noopener noreferrer"><button class="btn3"><i class="fa-brands fa-discord"></i> DISCORD</button></a>
+                <a href="https://www.glitchedpanda.cf/Twitter" target="_blank" rel="noopener noreferrer"><button class="btn2"><i class="fa-brands fa-twitter"></i> TWITTER</button></a>
             </div>
         </div>
     </div>    
