--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <title>Glitched Panda</title>
 </head>
 <body>
-    <div class="bg"></div>
+    <div class="bg noselect"></div>
 
-    <div class="center">
+    <div class="center noselect">
         <div class="animate__animated animate__jackInTheBox">
             <h1>Glitched Panda</h1>
             <p>A panda that likes gaming and coding</p>
@@ -28,7 +28,9 @@
                 <a href="https://www.glitchedpanda.cf/Twitter" target="_blank" rel="noopener noreferrer"><button class="btn2"><i class="fa-brands fa-twitter"></i> TWITTER</button></a>
             </div>
         </div>
-    </div>    
+    </div>   
+    
+    <p class="right">Made by Glitched Panda#6839</p>
 
 </body>
 </html>
