--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <div class="animate__animated animate__backInUp animate__delay-1s">
                 <a href="https://www.glitchedpanda.cf/YouTube" target="_blank" rel="noopener noreferrer"><button class="btn1"><i class="fa-brands fa-youtube"></i> YOUTUBE</button></a>
-                <a href="https://www.glitchedpanda.cf/Discord" target="_blank" rel="noopener noreferrer"><button class="btn3"><i class="fa-brands fa-discord"></i> DISCORD</button></a>
+                <a href="https://www.glitchedpanda.cf/discord" target="_blank" rel="noopener noreferrer"><button class="btn3"><i class="fa-brands fa-discord"></i> DISCORD</button></a>
                 <a href="https://www.glitchedpanda.cf/Twitter" target="_blank" rel="noopener noreferrer"><button class="btn2"><i class="fa-brands fa-twitter"></i> TWITTER</button></a>
             </div>
         </div>
