--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="center noselect">
         <div class="animate__animated animate__jackInTheBox">
             <h1>Glitched Panda</h1>
-            <p>A panda that likes gaming and coding</p>
+            <p>I like coding and playing videogames</p>
 
             <div class="animate__animated animate__backInUp animate__delay-1s">
                 <a href="https://www.glitchedpanda.cf/YouTube" target="_blank" rel="noopener noreferrer"><button class="btn1"><i class="fa-brands fa-youtube"></i> YOUTUBE</button></a>
